[tool.poetry]
name = "doitforher"
version = "0.1.0"
description = ""
authors = ["anibal.jasin"]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.6.0"
imutils = "^0.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
